# Graph-Creator

./: CMakeLists.txt  main.cpp
imgui/: imconfig.h
src/: Algorithms.cpp  Algorithms.h  Algorithms.hpp  EdgesVerteces.h  EventManager.hpp  Interface.hpp  LoadSave.hpp  main.cpp
